MD Extensions: Error Console: Fix a11y issues caught by a11y test.

Bug: 799597
Change-Id: I9e0277906ae9d54597bba5ac7fb62c67ad625873